# sacre_bleu

./: .clang-tidy  CMakeLists.txt  README.md  policy.ini  spec.md  style.md
src/: minimal_target.c  minimal_target.cpp  test_target.c  test_target.cpp  violation_target.c
src/bleu-loader/: main.cpp
src/common/: file_closer.h  ini.c  ini.h  minimal_target.c  policy.c  policy.cpp  policy.h  policy_test.c  policy_test.cpp  raii.h  result.h
src/inject/: injector.cpp  injector.h  injector_test.cpp  main.cpp
src/injector/: injector.c  injector.cpp  injector.h  injector_test.c  injector_test.cpp  main.c  main.cpp
src/loader/: main.c  main.cpp  minimal_target.c
src/sacre-injector/: injector.cpp  injector_test.cpp  main.cpp
tests/: fake_syscall.ini  gen_test.sh  integration_policy.ini  integration_policy_no_seccomp.ini  integration_test.sh  namespaces_only.ini  seccomp_safe.ini  seccomp_violation.ini  test_merge.sh
